--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,6 @@ ul {
   padding: 0;
   margin: 0;
 }
-
 .header,
 .footer,
 .content .a {
@@ -43,6 +42,7 @@ ul {
 .a {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 60px;
 }
 .a .text {
   margin-left: 80px;
@@ -52,15 +52,20 @@ ul {
 }
 .sign-up {
   background-color: #3882f6;
+  color: white;
 }
 .sign-up,
 .sign-in {
   border: none;
   border-radius: 10%;
+  height: 20px;
 }
 .title {
   font-size: 48px;
   color: #f9faf8;
+}
+.sub-title {
+  color: #e5e7eb;
 }
 .img {
   display: flex;
@@ -77,11 +82,13 @@ h6 {
   display: flex;
   flex-direction: column;
   background-color: antiquewhite;
+  padding-bottom: 80px;
 }
 .sub-text {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  padding-top: 40px;
 }
 .b .text {
   display: flex;
@@ -109,6 +116,7 @@ h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 60px;
 }
 .quote {
   font-size: 28px;
@@ -122,4 +130,43 @@ h6 {
   font-style: oblique;
   align-self: self-end;
   padding-right: 180px;
+}
+.d {
+  display: flex;
+  background-color: #3882f6;
+  border-radius: 1dvh;
+  margin: 40px 80px 40px 80px;
+  padding: 40px;
+}
+.blues {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 40px;
+}
+.d button {
+  margin-right: 70px;
+  background-color: #3882f6;
+  color: #e5e7eb;
+  border: 2;
+  border-color: #e5e7eb;
+  border-radius: 10%;
+  height: 45px;
+}
+.blues .text {
+  color: #e5e7eb;
+  margin: 0;
+}
+.blues .head {
+  font-size: 24px;
+  font-weight: 600;
+}
+p {
+  margin: 10px 0 10px 0;
+}
+.footer {
+  display: flex;
+  justify-content: space-around;
+  color: #e5e7eb;
 }
