--- a/sorry.css
+++ b/sorry.css
@@ -1,14 +1,22 @@
+html,
 body {
   display: flex;
-  flex-direction: column;
   background-color: azure;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  height: 100%;
+  margin: 0;
+  position: relative;
 }
 p {
+  display: flex;
   color: brown;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 20px;
 }
 div {
-  align-self: flex-end;
+  font-size: 36px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
